...
                                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="80"/>
                                                        <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="80" id="uzT-jn-kTq"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                        <state key="normal" title="Chat">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                                <real key="value" value="8"/>
                                                            </userDefinedRuntimeAttribute>
...
                                                        </connections>
                                                    </button>
                                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IXy-sY-xVP">
                                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="80"/>
                                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                        <state key="normal" title="Call"/>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                                <real key="value" value="8"/>
                                                            </userDefinedRuntimeAttribute>
                                                        </userDefinedRuntimeAttributes>
                                                        <connections>
...
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Z5-WV-RRb">
                                                <rect key="frame" x="0.0" y="0.0" width="394" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="rVf-aQ-jro"/>
                                                </constraints>
                                                <state key="normal" title="Close"/>
                                                <connections>
                                                    <action selector="btnCloseAction:" destination="MuM-Qt-z4J" eventType="touchUpInside" id="emV-kg-siJ"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
